--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .home {
-  background-image: url('./images/images/img5.jpg');
+  background-image:url('./images/img1.webp');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 }
 
 .services {
-  background-image: url('./images/images/img4.webp');
+  background-image: url('./images/img2.jpeg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -38,7 +38,7 @@
 }
 
 .products {
-  background-image: url('./images/images/img3.jpg');
+  background-image: url('./images/img3.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -47,7 +47,7 @@
 }
 
 .contact-us {
-  background-image: url('./images/images/img2.jpeg');
+  background-image: url('./images/img4.webp');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -56,7 +56,7 @@
 }
 
 .sign-up {
-  background-image: url('./images/images/img6.jpg');
+  background-image: url('./images/img2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -65,7 +65,7 @@
 }
 
 .marketing {
-  background-image: url('./images/images/img2.jpeg');
+  background-image: url('./images/img6.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -74,7 +74,7 @@
 }
 
 .consulting {
-  background-image: url('./images/images/img1.webp');
+  background-image: url('./images/img5.jpg');
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
